# gate-kucoin

./: .gitignore  CMakeLists.txt  README.md  build.sh  kucoin_config.toml  main.cpp
libs/aeron_cpp/: .gitmodules  CMakeLists.txt  Publisher.cpp  Publisher.h  README.md  Subscriber.cpp  Subscriber.h  build.sh
libs/aeron_cpp/examples/: BasicPublisher.cpp  BasicSubscriber.cpp
libs/aeron_cpp/src/: Publisher.cpp  Publisher.h  Subscriber.cpp  Subscriber.h
libs/toml++/impl/: key.h  parse_error.h
src/: HTTPSession.cpp  HTTPSession.h  KucoinDataclasses.h  KucoinREST.cpp  KucoinREST.h  KucoinWS.cpp  KucoinWS.h  Subscriber.cpp  Uri.cpp  Uri.h  WSSession.cpp  WSSession.h  kucoin_structures.cpp  kucoin_structures.h  utils.cpp  utils.h
src/KucoinAPI/: KucoinAPI.cpp  KucoinAPI.h  parsers.h
src/KucoinAPI/src/: KucoinDataclasses.cpp  KucoinDataclasses.h  KucoinHTTP.cpp  KucoinHTTP.h  KucoinREST.cpp  KucoinREST.h  KucoinWS.cpp  KucoinWS.h
src/config/: aeron_channel.h  core_config.h  gate_config.h
src/gateway/: gateway.cpp  gateway.h  gateway_running.cpp  gateway_running.h  handlers.cpp  handlers.h
src/includes/: KucoinREST.h  utils.h
src/json_parser/: Exceptions.h  JsonParser.cpp  JsonParser.h
src/kucoin_api/: KucoinAPI.cpp  KucoinAPI.h  KucoinREST.cpp  KucoinREST.h  KucoinWS.h  kucoin_structures.cpp  kucoin_structures.h
src/network_cpp/: HTTPSession.cpp  WSSession.cpp
src/toml++/impl/: parse_result.h  parser.inl
